# api-comparison

./: .env  .gitignore  docker-compose.yml  generating.py  startdb.sh
backend/rust-axum/: Cargo.toml  Dockerfile  docker-compose.yml  init.sh
backend/rust-axum/src/: main.rs
backend/rust-axum/src/apis/: mod.rs  user.rs
backend/rust-axum/src/apis/utils/: mod.rs  query_string_parser.rs
backend/rust-axum/src/database/: config.rs  crud.rs  database.rs  mod.rs  sql.rs
backend/rust-axum/src/database/sql/: components.rs  converters.rs  enums.rs  errors.rs  filters.rs  mod.rs  query_builder.rs  statements.rs  tables.rs  tests.rs  values.rs
backend/rust-axum/src/exceptions/: mod.rs
backend/rust-axum/src/services/: database.rs  logging.rs  mod.rs  services.rs
frontend/qwik/: package-lock.json  package.json
frontend/qwik/src/: global.css  root.tsx
generating/: generating.py
generating/auth/: admin.py  role.py
generating/backend/: databases.py
generating/frontend/: frameworks.py  html_element.py  sidebar_element.py
generating/frontend/icons/: bootstrap_icon_pack.py  feather_icon_pack.py  fontawesome_icon_pack.py  icon.py  icon_pack.py  ionicon_icon_pack.py  uikit_icon_pack.py
generating/frontend/pages/: create_page.py  dashboard_page.py  list_page.py  page.py  show_page.py  update_page.py
generating/generators/: app.py  backend_generator.py  database_generator.py  file.py  frontend_generator.py  generator.py
generating/model/: fields.py
generator/: generating.py
migrations/: users.sql
testing/: settings.json  test.py
(+91 files in other folders)
