[package]
name = "rust-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7.4", features = ["chrono", "postgres", "runtime-tokio-native-tls", "uuid"] }
axum = { version = "0.6.20", features = ["headers"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tower-http = { version = "0.5.2", features = ["cors"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
env_logger = "0.11.3"
log = "0.4.22"
async-trait = "0.1.81"

